[package]
name = "FPlot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.34.0", default-features = false, features = ["loaded", "debug"]}
winit = "0.26.0"
raw-window-handle = "0.4.2"
gpu-allocator = "0.12.0"